# projectM-qt6-pipewire

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release-appimage.yml
docs/: PROJECTM-INTEGRATION.md
packaging/linux/: qt6mplayer.desktop
scripts/: build-appimage.sh
src/: MainWindow.cpp  MainWindow.h  PlaylistModel.cpp  PlaylistModel.h  PresetFilterProxyModel.cpp  PresetFilterProxyModel.h  PresetLibraryModel.cpp  PresetLibraryModel.h  PresetMetadata.h  ProjectMEngine.cpp  ProjectMEngine.h  SettingsManager.cpp  SettingsManager.h  VisualizerWidget.cpp  VisualizerWidget.h  main.cpp
src/audio/: AudioSource.h  AudioSourceFactory.cpp  AudioSourceFactory.h  DummyAudioSource.cpp  DummyAudioSource.h  PipeWireAudioSource.cpp  PipeWireAudioSource.h
src/widgets/: RatingDelegate.cpp  RatingDelegate.h
